fix footer in the air version tablet

--- a/_src/assets/scss/layout/_landing-main.scss
+++ b/_src/assets/scss/layout/_landing-main.scss
@@ -48,4 +48,8 @@
     background-color: $colorGreenyBlue;
     text-transform: uppercase;
     border-radius: 21px;
+    @media all and (min-width:768px) {
+        @include boxParameter(186px 0 0 0, 10px 0 10px 0);
+    }
+
 }
